Set up the repository

--- a/unsupported.html
+++ b/unsupported.html
@@ -22,19 +22,22 @@
                         <div class="row" style="justify-content: center; margin: 4rem 1rem;">
                             <div class="col-12 col-md-6" style="cursor: pointer; margin: 0 3rem;">
                                 <div class="row box-shadow" style="text-align: left;">
-                                    <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/chrome.png" style="width: 15%; display: inline;">
+                                    <!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/chrome.png" style="width: 15%; display: inline;"> -->
+                                    <img class="lib-img" src="/assets/images/chrome.png" style="width: 15%; display: inline;">
                                     <p style="margin: 25px 0 0 10px"><strong>Google Chrome</strong></p>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6" style="cursor: pointer; margin: 2rem 3rem;">
                                 <div class="row box-shadow" style="text-align: left;">
-                                    <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/firefox.png" style="width: 15%;">
+                                    <!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/firefox.png" style="width: 15%;"> -->
+                                    <img class="lib-img" src="/assets/images/firefox.png" style="width: 15%;">
                                     <p style="margin: 25px 0 0 10px"><strong>Firefox</strong></p>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6" style="cursor: pointer; margin: 0 3rem;">
                                 <div class="row box-shadow" style="text-align: left;">
-                                    <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/safari-icon.png" style="width: 15%;">
+                                    <!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/safari-icon.png" style="width: 15%;"> -->
+                                    <img class="lib-img" src="/assets/images/safari-icon.png" style="width: 15%;">
                                     <p style="margin: 25px 0 0 10px"><strong>Safari</strong></p>
                                 </div>
                             </div>
