--- a/illness.html
+++ b/illness.html
@@ -10,7 +10,7 @@
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"> -->
     <!-- <link rel="stylesheet" href="../../public/webviews/aia_bplac_d2/assets/css/styles.css"> -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Yellow Messenger</title>
 
     <!-- custom datePicker for safari -->
@@ -50,7 +50,7 @@
                         height: 100%;">
                             <div class="col-2 " style="margin-right:1rem;">
                                 <!-- <img class="icon1" src="../../public/webviews/aia_bplac_d2/assets/images/illness.png" /> -->
-                                <img class="icon1" src="/assets/images/illness.png" />
+                                <img class="icon1" src="./assets/images/illness.png" />
                             </div>
                             <div style="margin: 0 1rem; display: grid;">
                                 <h1 class="display-4 main__header" style="display: inline-block;
@@ -1307,7 +1307,7 @@
                                 onclick="bankTranfer()">
                                 <div class="column box-shadow" style="text-align: center;">
                                     <!-- <img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/bank_transfer.png" style="width: 85%;"> -->
-                                    <img class="lib-img" src="/assets/images/bank_transfer.png" style="width: 85%;">
+                                    <img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         We will transfer the amount directly to the Bank Account of your choice.
                                     </div>
@@ -1316,7 +1316,7 @@
                             <div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
                                 <div class="column box-shadow" style="text-align: center;">
                                     <!-- <img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/pickup.png" style="width: 100%;"> -->
-                                    img class="lib-img" src="/images/pickup.png" style="width: 100%;">
+                                    <img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         Claim your benefit at any BPI or BPI Family Savings Bank near you even if you
                                         are
@@ -2109,7 +2109,7 @@
         crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script> -->
     <!-- <script src="../../public/webviews/aia_bplac_d2/assets/js/illness.js"></script> -->
-    <script src="/assets/js/illness.js"></script>
+    <script src="./assets/js/illness.js"></script>
     <script>
         $(".custom-file-input").on("change", function () {
             var fileName = $(this).val().split("\\").pop();
