--- a/accidental.html
+++ b/accidental.html
@@ -1230,12 +1230,9 @@
                                             <input class="form-check-input" type="checkbox" value=""
                                                 id="upload_invalidCheck_1" required>
                                             <div class="form-check-label" for="invalidCheck">
-                                                To fast track the processing of my claim request, I am authorizing AIA
-                                                Philam Life to contact my doctor directly to verify the documents I
-                                                submitted.
+                                                To fast track the processing of my claim request, I am authorizing AIA Philippines to contact my doctor directly to verify the documents I submitted. 
                                                 <div class="feedback_label">
-                                                    Kindly inform your doctor that AIA Philam Life will reach out to
-                                                    them to verify your submitted documents.
+                                                    Kindly inform your doctor that AIA Philam Life will reach out to them to verify your submitted documents.
                                                 </div>
                                             </div>
 
@@ -2035,13 +2032,13 @@
                         </p> -->
                         <p id="otp-text">We sent a One-Time PIN to your registered
                             <br> mobile number <span id="user_mobile"></span>.
-                            <br> Please enter the 6-digit PIN in the space below.
+                            <br> Kindly enter the OTP in the space below. 
                         </p>
                         <p id="otp-text">Your OTP expires after two minutes. Input the code you receive immediately.
                         </p>
-                        <p id="otp-text">Didn’t get the code? Please check --
-                            <br>If you’re in an area with strong mobile coverage to receive the SMS.
-                            <br> If your current mobile number matches what we have on record. To update it, <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">click here</a> 
+                        <p id="otp-text">If your current mobile number does not match our records, kindly update your contact details via <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">ePlan</a>  or by calling our hotline at (02)8528-2000.
+                            <!-- <br>If you’re in an area with strong mobile coverage to receive the SMS.
+                            <br> If your current mobile number matches what we have on record. To update it, <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">click here</a>  -->
                             <br><br> Click
                             <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
                             resend
