--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="../../public/webviews/aia_pal_d2/assets/css/styles.css"> -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Yellow Messenger</title>
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row justifyCenter">
                 <!-- <img src="../../public/webviews/aia_pal_d2/assets/images/claims.png" alt="claims"> -->
-                <img src="/assets/images/claims.png" alt="claims">
+                <img src="./assets/images/claims.png" alt="claims">
             </div>
         </div>
     </section>
@@ -807,8 +807,8 @@
 
     <!-- <script src="../../public/webviews/aia_pal_d2/assets/js/messages.js"></script>
     <script src="../../public/webviews/aia_pal_d2/assets/js/main.js"></script> -->
-    <script src="/assets/js/messages.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/messages.js"></script>
+    <script src="./assets/js/main.js"></script>
 
     <!-- To make recaptcha responsive -->
     <!-- <script>
