--- a/Unscheduled.html
+++ b/Unscheduled.html
@@ -7,7 +7,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>Downtime</title>
+    <title>Unscheduled system downtime</title>
     <style>
         body { text-align: center; padding: 150px; }
         h1 { font-size: 50px; }
