testing for github page

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="col-12 col-md-3 text-center cursor justifyCenter"
                                 style="display: flex;padding: 0;margin: 1rem 0 0 0.5rem;" onclick="getAccidentPage()">
-                                <div class="flip-card" style="background: white;">
+                                <div class="flip-card" style="background: red;">
                                     <div class="flip-card-inner justifyCenter vertical-center">
                                         <div class="front">
                                             <div class="card-body">
@@ -197,8 +197,6 @@
                         </div>
 
                         <div>
-                            <!-- <div class="g-recaptcha" data-sitekey="6LeFPOsZAAAAADGU9ehAxipxQBBlv1XvZRGd29gx"></div>
-                            <span class="error reference-track" id="err_recaptcha"></span> -->
                             <div class="g-recaptcha" data-sitekey="6LdmwlEeAAAAAD5gos5tuYDYgj-HDCWU6tfej1X4"></div>
                             <span class="error reference-track" id="err_recaptcha"></span>
                         </div>
