updated the illness page

--- a/illness.html
+++ b/illness.html
@@ -1016,8 +1016,8 @@
                                 </li>
 
                                 <li>
-                                    Please visit our website, <a href="https://www.bpi-philam.com"
-                                        target="_blank">www.bpi-philam.com</a> for our
+                                    Please visit our website, <a href="https://aia.com.ph"
+                                        target="_blank">aia.com.ph</a> for our
                                     Privacy Statement, which
                                     provides
                                     further details on
@@ -1078,7 +1078,7 @@
                                     <p style="margin-left: 1rem;">
                                         I/we may at anytime withdraw my/our consent by calling 02 8528-5501 or by
                                         emailing the request to <a target="_blank"
-                                            href="mailto:phi.philamprivacy@aia.com">phi.philamprivacy@aia.com</a>. Upon
+                                        href="mailto:dpo@aia.com">dpo@aia.com</a>. Upon
                                         receipt of such withdrawal of consent, the Company will no longer approach you
                                         for promotions or products that may
                                         be suited to your insurance needs. However, rest assured that this will not
