Updating sandbox code to staging code

--- a/accidental.html
+++ b/accidental.html
@@ -1096,7 +1096,7 @@
 
                                 <li>
                                     <p style="margin-left: 1rem;">
-                                        I/we may at anytime withdraw our consent by visiting Philam branches, calling
+                                        I/we may at anytime withdraw our consent by visiting AIA Philippine branches, calling
                                         the Company’s contact center, or by emailing the request to <a target="_blank"
                                             href="mailto:dpo@aia.com">dpo@aia.com</a>. Upon
                                         receipt of such withdrawal of consent, the Company will no longer approach me/us
@@ -1232,7 +1232,7 @@
                                             <div class="form-check-label" for="invalidCheck">
                                                 To fast track the processing of my claim request, I am authorizing AIA Philippines to contact my doctor directly to verify the documents I submitted. 
                                                 <div class="feedback_label">
-                                                    Kindly inform your doctor that AIA Philam Life will reach out to them to verify your submitted documents.
+                                                    Kindly inform your doctor that AIA Philippines will reach out to them to verify your submitted documents.
                                                 </div>
                                             </div>
 
