--- a/illness.html
+++ b/illness.html
@@ -1912,18 +1912,18 @@
                             <a style="color:#1b89f0 ;cursor: pointer;">ePlan</a> or by calling
                             <br> our hotline at (02)8528-2000.
                         </p> --->
-                        <p id="otp-text">We sent a One-Time PIN to your registered
+                        <p id="otp-text">We have sent a One-Time PIN to your
                             <br> mobile number <span id="user_mobile"></span>.
-                            <br> Please enter the 6-digit PIN in the space below.
+                            <br> Kindly enter the OTP in the space below.
                         </p>
-                        <p id="otp-text">Your OTP expires after two minutes. Input the code you receive immediately.
+                        <p id="otp-text">Your OTP expires after two minutes. Click <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to resend another one.
                         </p>
-                        <p id="otp-text">Didn’t get the code? Please check --
-                            <br>If you’re in an area with strong mobile coverage to receive the SMS.
-                            <br> If your current mobile number matches what we have on record. To update it, <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">click here</a> 
-                            <br><br> Click
+                        <p id="otp-text">If your current mobile number does not match our records, kindly update your contact details via <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;" target="_blank">ePlan</a>  or by calling our hotline at (02)8528-2000.
+                            <!-- <br>If you’re in an area with strong mobile coverage to receive the SMS.
+                            <br> If your current mobile number matches what we have on record. To update it, <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">click here</a>  -->
+                            <!-- <br><br> Click
                             <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
-                            resend
+                            resend -->
                         
                         </p>
                         <br>
