Update the code

--- a/unsupported.html
+++ b/unsupported.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="../../public/webviews/aia_pal_d2/assets/css/styles.css">
     <title>Unsupported_Page</title>
 </head>
+
 <body>
 
     <main class="jumbotron jumbotron-fluid">
@@ -18,12 +20,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-11 offset-md-1">
-                        <p>We’re sorry, some functionalities of our Claims Web Form is not available in Internet Explorer. For a seamless experience, we recommend using the following browsers:</p>
+                        <p>We’re sorry, some functionalities of our Claims Web Form is not available in Internet
+                            Explorer. For a seamless experience, we recommend using the following browsers:</p>
                         <div class="row" style="justify-content: center; margin: 4rem 1rem;">
                             <div class="col-12 col-md-6" style="cursor: pointer; margin: 0 3rem;">
                                 <div class="row box-shadow" style="text-align: left;">
                                     <!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/chrome.png" style="width: 15%; display: inline;"> -->
-                                    <img class="lib-img" src="/assets/images/chrome.png" style="width: 15%; display: inline;">
+                                    <img class="lib-img" src="/assets/images/chrome.png"
+                                        style="width: 15%; display: inline;">
                                     <p style="margin: 25px 0 0 10px"><strong>Google Chrome</strong></p>
                                 </div>
                             </div>
@@ -51,6 +55,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    
+
 </body>
+
 </html>
