--- a/accidental.html
+++ b/accidental.html
@@ -1096,7 +1096,8 @@
 
                                 <li>
                                     <p style="margin-left: 1rem;">
-                                        I/we may at anytime withdraw our consent by visiting AIA Philippine branches, calling
+                                        I/we may at anytime withdraw our consent by visiting AIA Philippines branches,
+                                        calling
                                         the Company’s contact center, or by emailing the request to <a target="_blank"
                                             href="mailto:dpo@aia.com">dpo@aia.com</a>. Upon
                                         receipt of such withdrawal of consent, the Company will no longer approach me/us
@@ -1110,8 +1111,9 @@
 
                                 <li>
                                     <p style="margin-left: 1rem;">
-                                        Please visit our website, <a target="_blank" href=" https://aia.com.ph">
-                                            aia.com.ph</a> for our Privacy Statement, which
+                                        Please visit our website, <a target="_blank"
+                                            href="https://aia.com.ph">https://aia.com.ph</a> for our Privacy Statement,
+                                        which
                                         provides further details on why your
                                         personal data is collected, how it is intended to be used, to whom your personal
                                         data may be transferred to, how to
@@ -1230,9 +1232,12 @@
                                             <input class="form-check-input" type="checkbox" value=""
                                                 id="upload_invalidCheck_1" required>
                                             <div class="form-check-label" for="invalidCheck">
-                                                To fast track the processing of my claim request, I am authorizing AIA Philippines to contact my doctor directly to verify the documents I submitted. 
+                                                To fast track the processing of my claim request, I am authorizing AIA
+                                                Philippines to contact my doctor directly to verify the documents I
+                                                submitted.
                                                 <div class="feedback_label">
-                                                    Kindly inform your doctor that AIA Philippines will reach out to them to verify your submitted documents.
+                                                    Kindly inform your doctor that AIA Philippines will reach out to
+                                                    them to verify your submitted documents.
                                                 </div>
                                             </div>
 
@@ -1428,8 +1433,8 @@
                                     you immediately.
                                 </p>
                                 <br />
-                                <p class="font-weight-normal">You may also check the progress of your request at <a
-                                        href="main">Status Tracker</a>. Just
+                                <p class="font-weight-normal">You may also check the progress of your request <a
+                                        href="main">here</a>. Just
                                     type in your reference
                                     number to view the status of your
                                     request.</p>
@@ -1888,8 +1893,9 @@
                                         style="align-self: flex-end; color: #b8123e; padding: 0 1rem; margin: 0 0.5rem 0.7rem 0.5rem;">Back</a>
                                     <div class="popup" style="width: 90%;">
                                         <button type="submit" onclick="pickup_Bpi()" class="btn" style="width: 100%;"
-                                            id='pick_up_btn'><span id='msg' style="color:white">YES, I WOULD LIKE TO PICK UP MY BENEFIT THROUGH
-                                            BPI</span>
+                                            id='pick_up_btn'><span id='msg' style="color:white">YES, I WOULD LIKE TO
+                                                PICK UP MY BENEFIT THROUGH
+                                                BPI</span>
                                             <div class="loader1" id="spin_loader_1" style="float: none;margin: 0 auto;">
                                                 <div class="loader-bg">
                                                     <div class="text"></div>
@@ -1963,8 +1969,8 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <!-- <p>Error</p> -->
-                        <button type="button" class="close" aria-label="Close" style="text-align: right;padding:12px"><span aria-hidden="true"
-                              >&times;</span></button><br>
+                        <button type="button" class="close" aria-label="Close"
+                            style="text-align: right;padding:12px"><span aria-hidden="true">&times;</span></button><br>
                         <p style="text-align: center;padding-bottom: 9px;" id="fallbackMessage">
                         </p>
                     </div>
@@ -2008,13 +2014,14 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <!-- <div class="modal-header"> -->
-
                     <!-- </div> -->
                     <div class="modal-body">
+
                         <button type="button" class="close" aria-label="Close"
                             style="text-align: right;padding:12px"><span aria-hidden="true"
                                 onclick="closeModal()">&times;</span></button><br>
-                     <!--   <p id="otp-text">We have sent a One-Time PIN to your
+
+                        <!--   <p id="otp-text">We have sent a One-Time PIN to your
                             <br> mobile number <span id="user_mobile"></span>.
                             <br> Kindly enter the OTP in the space below.
                         </p>
@@ -2030,20 +2037,40 @@
                             <a style="color:#1b89f0 ;cursor: pointer;">ePlan</a> or by calling
                             <br> our hotline at (02)8528-2000.
                         </p> -->
-                        <p id="otp-text">We have sent a One-Time PIN to your
+                        <!-- <p id="otp-text">We have sent a One-Time PIN to your
                             <br> mobile number <span id="user_mobile"></span>.
                             <br> Kindly enter the OTP in the space below.
                         </p>
                         <p id="otp-text">Your OTP expires after two minutes. Click <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to resend another one.
                         </p>
                         <p id="otp-text">If your current mobile number does not match our records, kindly update your contact details via <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;" target="_blank">ePlan</a>  or by calling our hotline at (02)8528-2000.
-                            <!-- <br>If you’re in an area with strong mobile coverage to receive the SMS.
-                            <br> If your current mobile number matches what we have on record. To update it, <a href="https://bit.ly/aiaphupdateinfo" style="color:#1b89f0 ;cursor: pointer;">click here</a>  -->
-                            <!-- <br><br> Click
-                            <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
-                            resend -->
                         
+                        </p> -->
+
+                        <p id="otp-text">We sent a One-Time PIN to your registered
+                            <br> mobile number <span id="user_mobile"></span>.
+                            <br> Please enter the 6-digit PIN in the space below.
                         </p>
+                        <p id="otp-text">Your OTP expires after two minutes. Input the code you receive immediately.
+                        </p>
+                        <p id="otp-text">Didn’t get the code? Please check --
+                            <br>If you’re in an area with strong mobile coverage to receive the SMS.
+                            <br> If your current mobile number matches what we have on record. To update it, click <a
+                                href="https://wwwuat.aia.com.ph/en/help-support/contact-info-update.html"
+                                target="_blank" style="color:#1b89f0 ;cursor: pointer;">here</a>
+                            <br><br> Click
+                            <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
+                            resend
+                        </p>
+                        <!-- <p id="otp-text">We sent a One-Time PIN to your
+                            <br> mobile number <span id="user_mobile"></span>.
+                            <br> Kindly enter the OTP in the space below.
+                        </p>
+                        <p id="otp-text">Your OTP expires after two minutes.Click <a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to resend another one
+                        </p>
+                        <p id="otp-text">If your current mobile number does not match our records, kindly update your contact details via <a href="https://wwwuat.aia.com.ph/en/help-support/contact-info-update.html" target="_blank" style="color:#1b89f0 ;cursor: pointer;">ePlan</a>  or by calling our hotline at (02)8528-2000. 
+                        </p> -->
+
                         <br>
                         <input type="text" class="input__box" maxlength="25" id="otp" value="" placeholder="OTP"
                             tabindex="1" />
@@ -2201,7 +2228,8 @@
         <div id="cover-spin"></div>
 
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script> -->
