--- a/death.html
+++ b/death.html
@@ -10,7 +10,7 @@
 		integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"> -->
 	<!-- <link rel="stylesheet" href="../../public/webviews/aia_pal_d2/assets/css/styles.css"> -->
-    <link rel="stylesheet" href="./assets/css/styles.css">
+	<link rel="stylesheet" href="./assets/css/styles.css">
 	<title>Yellow Messenger</title>
 	<!-- custom datePicker for safari -->
 	<script type="text/javascript">
@@ -52,7 +52,7 @@
 
 
 								<!-- <img class="icon" src="../../public/webviews/aia_pal_d2/assets/images/death.png" /> -->
-                                <img class="icon" src="./assets/images/death.png" />
+								<img class="icon" src="./assets/images/death.png" />
 
 
 							</div>
@@ -248,8 +248,7 @@
 																	Beneficiary’s last name?</label>
 																<input type="text" class="input__box" maxlength="30"
 																	id="field_BeneficiaryLastName" value=""
-																	placeholder="Last Name (if married, provide maiden name)"
-																	tabindex="10"
+																	placeholder="Last Name" tabindex="10"
 																	onkeypress="return isNotNumber(event) && checkSpcialChar(event) && checkLength(event, 30)"
 																	required />
 																<div id="err_field_BeneficiaryLastName" class="error">
@@ -3381,9 +3380,9 @@
 
 								<li>
 									<p style="margin-left: 1rem;">I/we may at anytime withdraw our consent by visiting
-										AIA Philippine branches, calling the Company’s contact center, or by emailing the
-										request to <a target="_blank"
-										href="mailto:dpo@aia.com">dpo@aia.com</a>. Upon
+										AIA Philippines branches, calling the Company’s contact center, or by emailing
+										the
+										request to <a target="_blank" href="mailto:dpo@aia.com">dpo@aia.com</a>. Upon
 										receipt of such withdrawal of consent, the Company will no longer approach me/us
 										for promotions or products that
 										may be suited to my/our insurance needs. I/We am/are assured that this will not
@@ -3392,8 +3391,9 @@
 								</li>
 
 								<li>
-									<p style="margin-left: 1rem;">Please visit our website, <a target="_blank" href=" https://aia.com.ph">
-										aia.com.ph</a> for
+									<p style="margin-left: 1rem;">Please visit our website, <a target="_blank"
+											href="https://aia.com.ph">
+											https://aia.com.ph</a> for
 										our Privacy Statement, which
 										provides further details on why your
 										personal data is collected, how it is intended to be used, to whom your
@@ -3662,7 +3662,7 @@
 								onclick="bankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
 									<!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/bank_transfer.png" style="width: 85%;"> -->
-                                    <img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
@@ -3670,7 +3670,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
 								<div class="column box-shadow" style="text-align: center;">
 									<!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/pickup.png" style="width: 100%;"> -->
-                                    <img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
@@ -3699,8 +3699,8 @@
 								<p class="font-weight-normal">If we would need additional documents to support your
 									request, we will reach out to you immediately.</p>
 								<br />
-								<p class="font-weight-normal">You may also check the progress of your request at <a
-										href="main">Status Tracker</a>. Just
+								<p class="font-weight-normal">You may also check the progress of your request <a
+										href="https://aporve.github.io/phase2-pal-staging/main">here</a>. Just
 									type in your reference
 									number to view the status of your
 									request.</p>
@@ -4159,8 +4159,7 @@
 															Beneficiary’s last name?</label>
 														<input type="text" class="input__box" maxlength="30"
 															id="field_addBeneficiaryLastName" value=""
-															placeholder="Last Name (if married, provide maiden name)"
-															tabindex="9"
+															placeholder="Last Name" tabindex="9"
 															onkeypress="return isNotNumber(event) && checkSpcialChar(event) && checkLength(event, 30)"
 															required />
 														<div id="err_field_addBeneficiaryLastName" class="error"></div>
@@ -6823,7 +6822,8 @@
 												Company to use the information in the insurance policy and all related
 												documents in the design and communication of the Company’s marketing
 												campaigns and offers in order to improve the quality of service the
-												Company provides, and to receive such marketing campaigns. I/we agree to share
+												Company provides, and to receive such marketing campaigns. I/we agree to
+												share
 												the
 												information in the insurance policy with third
 												parties for marketing campaigns.</p>
@@ -6858,17 +6858,19 @@
 
 									<li>
 										<p style="margin-left: 1rem;">I/we may at anytime withdraw our consent by
-											visiting Philam branches, calling the Company’s contact center, or by
+											visiting AIA Philippines branches, calling the Company’s contact center, or
+											by
 											emailing the request to <a target="_blank"
-												href="mailto:phi.philamprivacy@aia.com">phi.philamprivacy@aia.com</a>.
-											Upon receipt of such withdrawal of consent, the Company will no longer
-											approach you for promotions or products that may be suited to your insurance
-											needs. However, rest assured that this will not affect our ability to
-											provide quality service in relation to your existing policies.</p>
+												href="mailto:dpo@aia.com">dpo@aia.com</a>.Upon receipt of such
+											withdrawal of consent, the Company will no longer approach me/us for
+											promotions or products that may be suited to my/our insurance needs. I/We
+											am/are assured that this will not affect the Company’s ability to provide
+											quality service in relation to my/our existing policies.</p>
 									</li>
 									<li>
-										<p style="margin-left: 1rem;">Please visit our website,<a
-												href="https://www.philamlife.com">www.philamlife.com</a> for
+										<p style="margin-left: 1rem;">Please visit our website,<a target="_blank"
+												href="https://aia.com.ph">
+												https://aia.com.ph</a> for
 											our Privacy Statement, which
 											provides further details on why your
 											personal data is collected, how it is intended to be used, to whom your
@@ -7097,7 +7099,7 @@
 														</div>
 													</div>
 												</button>
-												 <!-- <button id="submit10_waiting" type="button"
+												<!-- <button id="submit10_waiting" type="button"
 													class="btn btn-danger"
 													style="width: 100%;padding: 0;display: none"><span
 														class="loading"></span></button> -->
@@ -7164,7 +7166,7 @@
 								onclick="addBeneficiarybankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
 									<!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/bank_transfer.png" style="width: 85%;"> -->
-                                    <img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
@@ -7173,7 +7175,7 @@
 								onclick="addBeneficiaryPickup()">
 								<div class="column box-shadow" style="text-align: center;">
 									<!-- <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/pickup.png" style="width: 100%;"> -->
-                                    <img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
@@ -7383,8 +7385,8 @@
 				<div class="modal-content">
 					<div class="modal-body">
 						<!-- <p>Error</p> -->
-						<button type="button" class="close" aria-label="Close" style="text-align: right;padding:12px"><span
-								aria-hidden="true">&times;</span></button><br>
+						<button type="button" class="close" aria-label="Close"
+							style="text-align: right;padding:12px"><span aria-hidden="true">&times;</span></button><br>
 						<p style="text-align: center;padding-bottom: 9px;" id="fallbackMessage">
 						</p>
 					</div>
@@ -7418,8 +7420,8 @@
 						<button type="button" class="close" aria-label="Close"
 							style="text-align: right;padding:12px"><span aria-hidden="true"
 								onclick="closeModal()">&times;</span></button><br>
-								
-					<!--	<p id="otp-text">We have sent a One-Time PIN to the
+
+						<!--	<p id="otp-text">We have sent a One-Time PIN to the
 							<br> mobile number <span id="user_mobile"></span>.
 							<br> Kindly enter the OTP in the space below.
 						</p>
@@ -7434,21 +7436,21 @@
 							<br> contact details via
 							<a style="color:#1b89f0 ;cursor: pointer;">ePlan</a> or by calling
 							<br> our hotline at (02)8528-2000. </p> -->
-							<p id="otp-text">We sent a One-Time PIN to your registered
-								<br> mobile number <span id="user_mobile"></span>.
-								<br> Please enter the 6-digit PIN in the space below.
+						<p id="otp-text">We sent a One-Time PIN to your registered
+							<br> mobile number <span id="user_mobile"></span>.
+							<br> Please enter the 6-digit PIN in the space below.
 						</p>
 						<p id="otp-text">Your OTP expires after two minutes. Input the code you receive immediately.
 						</p>
 						<p id="otp-text">Didn’t get the code? Please check --
-								<br>If you’re in an area with strong mobile coverage to receive the SMS.
-								<br> If your current mobile number matches what we have on record. If not, give us a call at (02) 8528-2000 to have it updated. 
-								<br><br> Click
-								<a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
-								resend
-						
+							<br>If you’re in an area with strong mobile coverage to receive the SMS.
+							<!-- <br> If your current mobile number matches what we have on record. If not, give us a call at (02) 8528-2000 to have it updated.  -->
+							<br><br> Click
+							<a style="color:#1b89f0 ;cursor: pointer;" onclick="resendOtp('resend')">here</a> to
+							resend
+
 						</p>
-		
+
 						<br>
 						<input type="text" class="input__box" maxlength="25" id="otp" value="" placeholder="OTP"
 							tabindex="1" />
@@ -7557,8 +7559,8 @@
 
 					</div>
 					<br>
-					<button type="button" class="btn btn-danger"
-						style="width: 50%; margin: 0 auto 3rem auto;" onclick="backToFileClaim()">Exit</button>
+					<button type="button" class="btn btn-danger" style="width: 50%; margin: 0 auto 3rem auto;"
+						onclick="backToFileClaim()">Exit</button>
 				</div>
 
 			</div>
@@ -7588,7 +7590,8 @@
 		<div id="cover-spin"></div>
 		<!-- Max Invalid Otp modal (drop-2 ) -->
 	</main>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 	<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 		crossorigin="anonymous"></script> -->
@@ -7597,7 +7600,7 @@
 		crossorigin="anonymous"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script> -->
 	<!-- <script src="../../public/webviews/aia_pal_d2/assets/js/death.js"></script> -->
-    <script src="./assets/js/death.js"></script>
+	<script src="./assets/js/death.js"></script>
 	<script>
 		$(".custom-file-input").on("change", function () {
 			var fileName = $(this).val().split("\\").pop();
